[package]
name = "tabulate"
version = "1.0.3-pre"
authors = ["Michael Budde <mbu@jobindex.dk>"]
license = "MIT/Apache-2.0"
description = "Tool for aligning data in columns"
repository = "https://github.com/mbudde/tabulate"
readme = "README.md"
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
combine = "3.2.0"
error-chain = "0.11.0"

[dependencies.clap]
version = "2.23.0"
features = ["wrap_help"]
