[package]
name = "tabulate"
version = "1.2.0"
authors = ["Michael Budde <git@mbudde.dk>"]
license = "MIT/Apache-2.0"
description = "Tool for aligning data in columns"
repository = "https://github.com/mbudde/tabulate"
readme = "README.md"
categories = ["command-line-utilities"]
build = "build.rs"
edition = "2018"

[dependencies]
combine = "4.0.0"
error-chain = "0.12.0"

[dependencies.clap]
version = "4"
features = ["wrap_help", "derive", "cargo", "string"]
